# melonDS

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Makefile  Makefile.common  README.md  melonDS.cbp
cmake/: Toolchain-cross-Switch.cmake
jni/: Android.mk
src/: ARCodeFile.cpp  ARM.cpp  ARM.h  ARMJIT.cpp  ARMJIT.h  ARMJIT_Internal.h  ARMJIT_Memory.cpp  ARMJIT_RegisterCache.h  ARM_InstrInfo.cpp  ARM_InstrInfo.h  CMakeLists.txt  CP15.cpp  CRC32.cpp  Config.cpp  Config.h  DMA.cpp  DSi.cpp  DSi_NAND.cpp  DSi_SD.cpp  DSi_SD.h  GBACart.cpp  GBACart.h  GPU.cpp  GPU.h  GPU2D.cpp  GPU2D.h  GPU2D_Neon.cpp  GPU3D.cpp  GPU3D.h  GPU3D_Soft.cpp  GPU3D_Soft.h  NDS.cpp  NDS.h  NDSCart.cpp  NDSCart.h  NDSCart_SRAMManager.cpp  NDSCart_SRAMManager.h  OpenGLSupport.h  Platform.h  SPI.cpp  (+8 more)
src/ARMJIT_A64/: ARMJIT_ALU.cpp  ARMJIT_Branch.cpp  ARMJIT_Compiler.cpp  ARMJIT_Compiler.h  ARMJIT_LoadStore.cpp
src/ARMJIT_x64/: ARMJIT_Compiler.cpp  ARMJIT_LoadStore.cpp
src/frontend/: Util_ROM.cpp
src/frontend/qt_sdl/: main.cpp  main.h
src/libretro/: config.cpp  input.cpp  input.h  libretro.cpp  opengl.cpp  opengl.h  platform.cpp  romlist.h  screenlayout.cpp  screenlayout.h  shaders.h  utils.cpp  utils.h
src/libretro/libretro-common/glsm/: glsm.c
src/libretro/libretro-common/include/glsm/: glsmsym.h
src/libretro/libretro-common/rthreads/: rsemaphore.c
src/libretro/libretro-common/streams/: file_stream_transforms.c
src/libui_sdl/: PlatformConfig.cpp  main.cpp
src/switch/: CMakeLists.txt  Platform.cpp  custom_counter.h  main.cpp  profiler.cpp  profiler.h
